Fix search bar position on mobile and desktop sizes

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -513,6 +513,11 @@ section:nth-of-type(2) {
     box-shadow: 0 1px 0 0 #000 !important;
 }
 
+#topbarsearch form {
+    position: relative;
+    left: 50px;
+}
+
 /***********************/
 /*   helper classes    */
 /***********************/
